# hadron

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.controller  Dockerfile.e2e-runner  Dockerfile.frontend  Dockerfile.worker  Makefile  README.md  alembic.ini  docker-compose.yaml  package.json  pyproject.toml  test_exc.py  worker_log.txt
adr/: agents.md  architecture.md  auth.md  configuration.md  control-room.md  delivery.md  infrastructure.md  intake.md  landscape.md  orchestration.md  roadmap.md  sandboxing.md  security.md  stages.md
features/: agent_backends.feature  agent_cost_tracking.feature  agent_execution.feature  agent_phases.feature  agent_prompts.feature  agent_three_phase.feature  analytics_dashboard.feature  api_key_management.feature  audit_log.feature  backend_templates.feature  budget_enforcement.feature  checkpoint_resume.feature  ci_integration.feature  controller_api.feature  cost_dashboard.feature  cost_tracking.feature  cr_creation_dialog.feature  cr_list_search.feature  event_streaming.feature  gemini_agent_execution.feature  git_operations.feature  health_checks.feature  interventions.feature  live_activity_feed.feature  observability.feature  pipeline_behaviour_translation.feature  pipeline_behaviour_verification.feature  pipeline_defaults.feature  pipeline_delivery.feature  pipeline_e2e_testing.feature  pipeline_flow.feature  pipeline_implementation.feature  pipeline_intake.feature  pipeline_rebase.feature  pipeline_release.feature  pipeline_repo_identification.feature  pipeline_retrospective.feature  pipeline_review.feature  pipeline_tdd.feature  pipeline_worktree_setup.feature  (+1 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
scripts/: build-images.sh  deploy-local.sh  dummy_server.py  run-e2e.py  setup-test-repo.sh  trigger-cr.sh
test-repo/: AGENTS.md  main.py  pyproject.toml
tests/: conftest.py  test_agent_phases.py  test_analytics_route.py  test_api_keys_route.py  test_audit_route.py  test_backend_factory.py  test_base_backend.py  test_bootstrap_config.py  test_cr_validation.py  test_crypto.py  test_db_engine.py  test_detect.py  test_diff_capture.py  test_diff_scope.py  test_e2e_runner_contract.py  test_e2e_testing.py  test_edges.py  test_error_classifier.py  test_event_bus.py  test_gemini_agent.py  test_gemini_backend.py  test_github.py  test_global_stream.py  test_graph.py  test_health_route.py  test_models.py  (+26 more)
(+305 files in other folders)
