[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hadron"
version = "0.1.0"
description = "AI-powered SDLC pipeline by Collide"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "anthropic>=0.42",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.1",
    "alembic>=1.14",
    "redis>=5.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "kubernetes>=31.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hadron"]

[tool.hatch.build.targets.wheel.force-include]
"src/hadron/prompts" = "hadron/prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
