[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hadron"
version = "0.1.0"
description = "AI-powered SDLC pipeline by Collide"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "langgraph>=1.1",
    "langgraph-checkpoint-postgres>=3.0",
    "anthropic>=0.86",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31",
    "psycopg[binary]>=3.3",
    "alembic>=1.18",
    "redis>=7.4",
    "pydantic>=2.12",
    "sse-starlette>=3.3",
    "kubernetes>=35.0",
    "httpx>=0.28",
    "python-dotenv>=1.2",
    "cryptography>=46.0",
    "structlog>=25.5",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.68"]
openai = ["openai>=2.30"]
opencode = ["openai>=2.30"]
all-backends = ["google-genai>=1.68", "openai>=2.30"]
observability = [
    "prometheus-client>=0.25",
    "opentelemetry-api>=1.41",
    "opentelemetry-sdk>=1.41",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
    "aiosqlite>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hadron"]

[tool.hatch.build.targets.wheel.force-include]
"src/hadron/prompts" = "hadron/prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
